# mcp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: cli_client.rs
src/: error.rs  lib.rs
src/client/: mod.rs
src/logging/: mod.rs
src/prompts/: mod.rs
src/protocol/: mod.rs  tests.rs  types.rs
src/resource/: mod.rs
src/server/: config.rs  mod.rs
src/tools/: calculator.rs  mod.rs  test_tool.rs
src/tools/file_system/: directory.rs  mod.rs  read.rs  search.rs  write.rs
src/transport/: mod.rs  sse.rs  stdio.rs  unix.rs  ws.rs
tests/: client.rs  e2e.rs  notification_tests.rs  resources.rs  tools.rs
