[package]
name = "mcp_rs"
description = "a library for making MCP (Model Context Protocol) compatible programs with rust"
version = "0.1.0"
edition = "2021"
authors = ["Emil Lindfors <[email protected]>"]
keywords = ["gen", "anthropic", "mcp_protocol", "mcp"]
categories = ["api-bindings"]
license = "MIT"


[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tokio-util = "0.7"
jsonrpc-core = "18"
warp = "0.3"
jsonrpc-derive = "18"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
base64 = "0.22"
async-stream = "0.3"
mime_guess = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
mime = "0.3"
tokio-tungstenite = "0.26"
tracing-core = "0.1"
async-recursion = "1"
http = "1.1"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[lib]
name = "mcp_rs"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
tempfile = "3.14.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
